@@ -14,6 +14,7 @@ Verilator 5.031 devel
 **Minor:**
 
 * Add coverage point hierarchy to coverage reports (#5575) (#5576). [Andrew Nolte]
+* Add error when improperly storing to parameter (#5147). [Gökçe Aydos]
 * Fix can't locate scope error in interface task delayed assignment (#5462) (#5568). [Zhou Shen]
 * Fix BLKANDNBLK for for VARXREFs (#5569). [Todd Strader]
 * Fix VPI error instead of fatal for vpi_get_value() on large signals (#5571). [Todd Strader]
